[package]

name = "Hartmann"
version = "0.0.1"
authors = ["yuya yano <yuya.yano.6260@gmail.com>"]

[[bin]]

name = "server"
path = "src/server.rs"

[[bin]]

name = "client"
path = "src/client.rs"

[dependencies]

regex = "0.1.1"

[dependencies.redis]

git = "https://github.com/mitsuhiko/redis-rs.git"
